--- a/public/login.html
+++ b/public/login.html
@@ -97,7 +97,7 @@
 <body>
   <div class="login-container">
     <h2>Driver Login</h2>
-    <form method="POST" action="/api/auth/login">
+    <form method="POST" action="/api/to/driver-login">
       <label for="username">Username</label>
       <input type="text" name="username" id="username" required />
 
