--- a/public/tripsheet.html
+++ b/public/tripsheet.html
@@ -9,7 +9,7 @@
     <th>Content</th>
     <th>Status</th>
     <th>Received Date</th>
-    <th>POD</th> <!-- 👈 Added POD column -->
+    <th>POD</th>
   </tr>
 </thead>
 
