--- a/public/tripsheet.html
+++ b/public/tripsheet.html
@@ -1,19 +1,142 @@
-<!-- keep your full <html> and <head> section as is -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MM Courier | Trip Sheet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    :root {
+      --gold: #cebd80;
+      --navy: #0a2b52;
+      --blue: #409dbc;
+      --white: #ffffff;
+    }
 
-<!-- inside your <table> thead -->
-<thead>
-  <tr>
-    <th>Waybill</th>
-    <th>Tracking #</th>
-    <th>Customer</th>
-    <th>Content</th>
-    <th>Status</th>
-    <th>Received Date</th>
-    <th>POD</th>
-  </tr>
-</thead>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: var(--white);
+      color: var(--navy);
+      margin: 0;
+      padding: 0;
+    }
 
-<!-- update JS below inside <script> -->
+    header {
+      background-color: var(--navy);
+      color: var(--white);
+      padding: 20px;
+      text-align: center;
+    }
+
+    header img {
+      height: 60px;
+      margin-bottom: 10px;
+    }
+
+    .company-info {
+      font-size: 14px;
+      margin-top: 5px;
+    }
+
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    h2 {
+      color: var(--navy);
+      margin-top: 0;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      font-size: 14px;
+    }
+
+    table, th, td {
+      border: 1px solid var(--blue);
+    }
+
+    th {
+      background-color: var(--blue);
+      color: white;
+      padding: 10px;
+    }
+
+    td {
+      padding: 8px;
+      text-align: center;
+    }
+
+    .logout-btn {
+      float: right;
+      margin-top: -50px;
+      background-color: var(--gold);
+      color: var(--navy);
+      border: none;
+      padding: 8px 12px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .logout-btn:hover {
+      background-color: #e3d49b;
+    }
+
+    /* ✅ Style for POD preview icon link */
+    td a {
+      text-decoration: none;
+      color: green;
+      font-size: 18px;
+    }
+  </style>
+</head>
+<body>
+
+<script>
+  // Redirect to login if not authenticated
+  if (localStorage.getItem('mmcourier_loggedin') !== 'true') {
+    window.location.href = '/login.html';
+  }
+
+  // Load driver name
+  const driverName = localStorage.getItem('mmcourier_driver') || 'Driver';
+</script>
+
+<header>
+  <img src="https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png" alt="MM Courier Logo">
+  <div class="company-info">
+    <strong>Pakisa Logistics Express (Pty) Ltd</strong><br>
+    10 Burry Koean Street, Jet Park, Boksburg, 1469<br>
+    Website: <a href="https://www.pakisalogistics.co.za" style="color: #cebd80;">www.pakisalogistics.co.za</a> |
+    Email: ops1@pakisalogistics.co.za |
+    Tel: 011 397 1151
+  </div>
+</header>
+
+<div class="container">
+  <button class="logout-btn" onclick="logout()">Logout</button>
+  <h2>Trip Sheet for <span id="driverName">...</span></h2>
+
+  <table id="tripSheetTable">
+    <thead>
+      <tr>
+        <th>Waybill</th>
+        <th>Tracking #</th>
+        <th>Customer</th>
+        <th>Content</th>
+        <th>Status</th>
+        <th>Received Date</th>
+        <th>POD</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Populated by JS -->
+    </tbody>
+  </table>
+</div>
 
 <script>
   document.getElementById('driverName').textContent = driverName;
@@ -35,25 +158,25 @@
         return;
       }
 
-assigned.forEach(parcel => {
-  const row = tableBody.insertRow();
+      assigned.forEach(parcel => {
+        const row = tableBody.insertRow();
 
-  const podCell = parcel.pod_url
-    ? `<a href="${parcel.pod_url}" target="_blank" title="View POD">✅</a>`
-    : `<a href="/upload-pod.html?parcelId=${parcel.id}">
-         <button style="padding: 4px 8px; font-size: 12px;">Upload POD</button>
-       </a>`;
+        const podCell = parcel.pod_url
+          ? `<a href="${parcel.pod_url}" target="_blank" title="View POD">✅</a>`
+          : `<a href="/upload-pod.html?parcelId=${parcel.id}">
+               <button style="padding: 4px 8px; font-size: 12px;">Upload POD</button>
+             </a>`;
 
-  row.innerHTML = `
-    <td>${parcel.waybill_number || '-'}</td>
-    <td>${parcel.tracking_number}</td>
-    <td>${parcel.customer || '-'}</td>
-    <td>${parcel.content || '-'}</td>
-    <td>${parcel.status}</td>
-    <td>${parcel.received_date ? parcel.received_date.slice(0, 10) : '-'}</td>
-    <td>${podCell}</td>
-  `;
-});
+        row.innerHTML = `
+          <td>${parcel.waybill_number || '-'}</td>
+          <td>${parcel.tracking_number}</td>
+          <td>${parcel.customer || '-'}</td>
+          <td>${parcel.content || '-'}</td>
+          <td>${parcel.status}</td>
+          <td>${parcel.received_date ? parcel.received_date.slice(0, 10) : '-'}</td>
+          <td>${podCell}</td>
+        `;
+      });
 
     } catch (err) {
       console.error('Failed to fetch trip sheet', err);
@@ -68,3 +191,6 @@ assigned.forEach(parcel => {
 
   fetchTrips();
 </script>
+
+</body>
+</html>
